--- a/SpringBootDemo/build.gradle
+++ b/SpringBootDemo/build.gradle
@@ -1,21 +1,30 @@
 buildscript {
     ext {
-        springBootVersion = '1.3.0.RELEASE'
+        springBootVersion = '1.4.2.RELEASE'
     }
     repositories {
         mavenCentral()
+        jcenter()
         maven { url 'http://repo.spring.io/plugins-release' }
+        maven { url "https://repo.spring.io/snapshot" }
+        maven { url "https://repo.spring.io/milestone" }
+
+
     }
     dependencies {
         classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
         classpath 'org.springframework.build.gradle:propdeps-plugin:0.0.7'
+        classpath('org.springframework:springloaded:1.2.4.RELEASE')
+        //apply plugin: 'spring-boot' 에 대한 dependency plugin 문제로 검색하여 추가
+        classpath ('io.spring.gradle:dependency-management-plugin:0.6.0.RELEASE')
     }
 }
 
 apply plugin: 'java'
 apply plugin: 'eclipse'
 apply plugin: 'idea'
-apply plugin: 'spring-boot' 
+//apply plugin: 'spring-boot'
+apply plugin: 'org.springframework.boot'
 
 jar {
     baseName = 'spring-boot-demo'
@@ -23,6 +32,13 @@ jar {
 }
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
+
+idea {
+    module {
+        inheritOutputDirs = false
+        outputDir = file("$buildDir/classes/main/")
+    }
+}
 
 repositories {
     mavenCentral()
@@ -49,8 +65,8 @@ configure(allprojects) {
 
 eclipse {
     classpath {
-         containers.remove('org.eclipse.jdt.launching.JRE_CONTAINER')
-         containers 'org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8'
+        containers.remove('org.eclipse.jdt.launching.JRE_CONTAINER')
+        containers 'org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8'
     }
 }
 
